// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should wrap package title names that begin with true or false in quotes. 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 8378E02252D9E1E4-00992c428899e681-89400CEE57FD74FC-143971ddcde58490


"true@^0.0.4":
  version "0.0.4"
  resolved "localhost/true-0.0.4.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 2`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: D1A7C2F4565CE3C1-f3d3b154f74e73bf-7756239D174A67D9-d1fdadfe94639f13


"false@^0.0.4":
  version "0.0.4"
  resolved "localhost/false-0.0.4.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 3`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 1FDBABBCDAA70232-ad01a302e7454886-1E165C14E0670255-d146a2f75fd14c2a


"falsetto@^0.2.5":
  version "0.2.5"
  resolved "localhost/falsetto-0.2.5.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 4`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 4B7CBE162F68D238-77d4fa86576abbb9-FD5AE9558F321C61-f8fd3eff756b42eb


"true-case-path@^2.2.1":
  version "2.2.1"
  resolved "localhost/true-case-path-2.2.1.tgz"
"
`;

exports[`should grab the file specified in the yarn.lock file when no other lockfile is present 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 6D2D8C2F28978B88-acffc0c02fcd76ce-D12EE8D158CC1FD4-25755d90c5bdf4f3


emoji-turkey@^1.2.0:
  version "1.3.0"
  resolved "localhost/emoji-turkey-1.3.0.tgz"
"
`;

exports[`should grab the file specified in the yarn.lock file when no other lockfile is present 2`] = `"{"name":"foo","version":"0.0.0","dependencies":{"emoji-turkey":"^1.2.0"},"devDependencies":{}}"`;
